despliegue de icons animados

--- a/index.html
+++ b/index.html
@@ -131,25 +131,25 @@
               <div class="services-box">
                 <div class="services-content">                  
                   <!--<i class="bx bx-code-alt"></i>-->
-                  <video  width="40"  src="/img/navegador.mp4" autoplay loop></video>
+                  <video  width="40"  src="/img/navegador.mp4" autoplay muted loop></video>
                   <h3>Fullstack Developer Freelancer</h3>
                   <p>Development of dynamic web pages, managing logic for interaction with servers</p>
                   <a href="#" class="btn">Read More</a>
                 </div>
                 <div class="services-content">         
-                  <video  width="40"  src="/img/grafico-de-linea.mp4" autoplay loop></video>         
+                  <video  width="40"  src="/img/grafico-de-linea.mp4" autoplay muted loop></video>         
                   <h3>Financial Consultant</h3>
                   <p>prepare budgets, carry out investment projects, analyze trends of financial assets to maximize profits<br></p>
                   <a href="#" class="btn">Read More</a>
                 </div>
                 <div class="services-content">
-                  <video  width="40" src="/img/analisis-de-los-datos.mp4" autoplay loop></video>
+                  <video  width="40" src="/img/analisis-de-los-datos.mp4" autoplay muted loop></video>
                   <h3>DataScience Analytics</h3>
                   <p>Analyze large volumes of data, seeking to detect patterns to anticipate trends with statistical models</p>
                   <a href="#" class="btn">Read More</a>
                 </div>
                 <div class="services-content">
-                  <video  width="40"  src="/img/carpeta.mp4" autoplay loop></video>
+                  <video  width="40"  src="/img/carpeta.mp4" autoplay muted loop></video>
                   <h3>Digital automation</h3><br>
                   <p>develop digital applications on repetitive tasks to reduce costs and improve administrative efficiency</p>
                   <a href="#" class="btn">Read More</a>
